@@ -16,6 +16,7 @@ Jython 2.7.3a1
     - [ GH-178 ] Update icu4j JAR to 71.1
     - [ GH-177 ] Update Ant to 1.10.12 (Gradle build) (CVE-2020-1945, 2021-36374)
     - [ GH-160 ] Improve context of "Cannot create PyString with non-byte value"
+    - [ GH-159 ] Non-byte PyString error during initialisation in Turkish locale
     - [ GH-158 ] Upgrade Bouncy Castle to 1.71
     - [ GH-157 ] Upgrade ASM to 9.3
     - [ GH-156 ] Replace custom SHA224 digest with Java's
